# grpc_zlib_cares_broken_example

./: CMakeLists.txt
cmake/: ccache.cmake  flatbuffers.cmake  grpc.cmake  paho.cmake  protobuf.cmake  sqlite.cmake  zlib.cmake
include/: CMakeLists.txt
include/ircsrv/: Version.h.in
src/: main.cpp
